# IT3180_BlueMoon_PersonalProject

./: Cargo.toml  README.md
back-end/: .gitignore  Cargo.toml
back-end/migrations/: V1_create_users.sql
back-end/src/: db.rs  main.rs
back-end/src/enums/: mod.rs  resident_enum.rs  role_enum.rs  user_enum.rs  user_role.rs
back-end/src/handlers/: auth_handlers.rs  user_handlers.rs
back-end/src/models/: hourse_hold.rs  mod.rs  residents.rs  user.rs
back-end/src/routes/: auth.rs  auth_routes.rs  mod.rs  user_routes.rs
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: V1_create_users.sql  drop.sql  query-example.sql
backend/src/: db.rs  main.rs
backend/src/enums/: resident_enum.rs  room_enum.rs  user_enum.rs
backend/src/handlers/: auth_handlers.rs  mod.rs  resident_handlers.rs  user_handlers.rs
backend/src/models/: house_hold.rs  mod.rs  resident.rs  residents.rs  user.rs
backend/src/routes/: auth_routes.rs  mod.rs  resident_routes.rs  user_routes.rs
backend/src/services/: auth_services.rs
docs/: Ghi Nhận yêu Cầu.xlsx  Mẫu lập kế hoạch dự án theo nguyên tắc Agile.xlsx  WorkForMembers.txt  ke_hoach.docx
front-end/src/: App.js  index.html
front-end/src/Component/: Citizens.js  Feedback.js  Login.js  Register.js
front-end/src/css/: Layout.css  Register.css
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/Component/: Admin.js  Layout.js  Login.js  Register.js
frontend/src/api/: auth.js
frontend/src/css/: Login.css
src/: main.rs
src/models/: user.rs
src/routes/: auth.rs
