[package]
name = "it3180"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"]}